# Aura

./: .gitignore  .gitmodules  LICENSE  README.md  asr_batch_results.csv
.github/workflows/: release.yml
core/: .gitignore  Cargo.toml  build.rs
core/examples/: capture_to_vad.rs  capture_to_wav.rs  e2e_transcribe_wav.rs  query_onnx.rs  test_vad.rs  transcribe_wav.rs
core/src/: lib.rs
core/src/ai/: gemini_live.rs  mod.rs  sense_voice_capi.cc  sense_voice_capi.h  sense_voice_ffi.rs  sensevoice.rs  translator.rs
core/src/audio/: capture.rs  capture_tests.rs  mod.rs  resampler.rs  ring_buffer.rs
core/src/ffi/: exports.rs  mod.rs  pipeline.rs
core/src/vad/: mod.rs  silero.rs  state_machine.rs
docs/: 2026-07-01-实时游戏语音翻译资源.md  2026-07-02-implementation-plan-capture.md  2026-07-07-latency-analysis.md  architecture.md  asr-test-guide.md  e2e_baseline.md  e2e_test_protocol.md  e2e_test_report_2026-07-09.md  vad_latency_evaluation_2026-07-08.md  vad_optimization_analysis.md  vad_tuning.md
docs/superpowers/plans/: 2026-07-06-ci-cd-pipeline.md  (+4 more)
models/: .gitkeep
scripts/: analyze_timing.py  build.ps1  build.py  build_all.ps1  compare_e2e_baseline.ps1  compare_e2e_baseline.py  generate_report.py  release.ps1  run_asr_batch.ps1  run_asr_batch.py  run_dev.ps1  run_e2e_batch.ps1  run_e2e_batch.py  run_e2e_sweep.ps1  run_e2e_sweep.py  run_thread_sweep.ps1  run_thread_sweep.py  test_asr.py
tests/test_audio_samples/: .gitkeep
ui/: Aura.sln
ui/Aura/: App.xaml  App.xaml.cs  Aura.csproj  ModelManager.cs  UpdateChecker.cs
ui/Updater/: Program.cs  Updater.csproj
(+16 files in other folders)
