[package]
name = "aura_core"
version = "0.1.0"
edition = "2021"
description = "Aura – real-time game voice translation core pipeline (audio capture → VAD → AI → FFI)"

[lib]
name = "aura_core"
crate-type = ["cdylib", "rlib"]   # cdylib → aura_core.dll for C# P/Invoke; rlib → Rust tests

[dependencies]
# --- Windows audio ---
wasapi = "0.4"                     # WASAPI process-loopback capture
windows = { version = "0.58", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Variant",
] }

# --- VAD ---
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }  # ONNX Runtime for Silero VAD

# --- AI / Networking ---
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
url = "2"

# --- Utilities ---
crossbeam-queue = "0.3"            # Lock-free SPSC ring buffer
ringbuf = "0.4"                    # High-perf ring buffer alternative
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
hound = "3.5"                      # WAV file I/O for tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
